changed grid items so when not moused over they are titles and when moused over they change to listed items. This required me to also change the header due to z-index issues

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,7 +5,6 @@
 	margin: 0;
 	padding: 0;
 	color: black;
-	cursor: context-menu;
 }
 
 body{
@@ -91,6 +90,7 @@ textarea{
 	width: 455px;
 	height: 550px;
 	z-index: -1;
+	bottom: 37px; 
 }
 
 iframe {
@@ -109,6 +109,7 @@ iframe {
 	display: block;
 	cursor: pointer;
 	z-index: 999;
+	margin-bottom: 37px;
 }
 
 .navButton:hover{
@@ -130,10 +131,6 @@ iframe {
 	width: 90%;
 	z-index: -1;
 	margin-bottom: 20px;
-}
-
-.project-h2 {
-
 }
 
 .projects-h3 {
@@ -174,6 +171,50 @@ iframe {
 	overflow: scroll;
 }
 
+.grid-container {
+	display: grid;
+	grid-template-columns: 250px 250px 250px;
+	grid-template-rows: 250px 250px 250px;
+	padding: 10px;
+	justify-content: center;
+	pointer-events: all;
+	z-index: 998;
+}
+
+.grid-item {
+	color: white;
+	font-size: 1.25rem;
+	padding: 5px;
+	border: 1px solid black;
+	background-color: #00853e;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.grid-item * {
+	color: white;
+	pointer-events: none;
+}
+
+.grid-item h3 {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.grid-item h4 {
+	font-size: 1.75rem;
+	font-weight: 500;
+}
+
+.grid-item dl dt {
+	font-size: 1.25rem;
+	padding: 5px;
+	display: inline-block;
+}
+
 #contact-me-overlay {
 	font-size: 1.5rem;
 	padding: 20px 30px;
@@ -198,77 +239,18 @@ iframe {
 }
 
 #home, #about-me {
-	position: relative;
 	display: block;
 	text-align: left;
 	top: 50px;
-	left: 5%;
 	min-width: 50%;
 	max-width: 60%;
-	z-index: -1;
 	margin-bottom: 75px;
+	margin-left: 5%;
 }
+
 
 #about-me h3 {
 	font-weight: lighter;
-}
-
-#skill-boxes {
-	position: relative;
-	display: inline;
-	width: 100%;
-	background-color: #00853e;
-	padding: 10px;
-}
-
-#skill-box-header {
-	position: relative;
-	display:block;
-	color: white;
-	font-size: 1.5rem;
-}
-
-#skill-box {
-	position: relative;
-	display: inline;
-	width: 10%;
-	//border-bottom: 2px solid black;
-	//border-left: 2px solid black;
-	//border-right: 2px solid black;
-	color: white;
-	line-height: 1.5rem;
-	//background-color: #00853e;
-}
-
-.grid-container {
-	display: grid;
-	grid-template-columns: 250px 250px 250px;
-	padding: 10px;
-	justify-content: center;
-}
-
-.grid-item {
-	color: white;
-	font-size: 1.25rem;
-	padding: 5px;
-	border: 1px solid black;
-	background-color: #00853e;
-	text-align: center;
-}
-
-.grid-item h4 {
-	font-size: 1.75rem;
-	font-weight: 500;
-	color: white;
-	text-decoration: underline;
-	text-align: center;
-}
-
-.grid-item dl dt {
-	color: white;
-	font-size: 1.25rem;
-	padding: 5px;
-	display: inline-block;
 }
 
 @media only screen and (orientation: portrait) , screen and (max-width: 1440px) {
@@ -289,6 +271,7 @@ iframe {
 
 	.grid-container {
 		grid-template-columns: 250px 250px;
+		grid-template-rows: 250px 250px 250px 250px;
 	}
 
 	#home {
@@ -305,26 +288,9 @@ iframe {
 	}
 
 	#about-me {
-		position: relative;
 		float: none;
 		width: 100%;
 		margin-bottom: 100px;
-	}
-
-	#skill-boxes {
-		display: inline-block;
-		width: 50%;
-		left: 45%;
-		text-align: center;
-	}
-
-	#skill-box-header {
-		font-size: 1.5rem;
-	}
-
-	#skill-box {
-		font-size: 1.25rem;
-		line-height: 2.0rem;
 	}
 
 	#learn-more {
